--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
-    "next": "latest",
+    "next": "^16.1.3",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.10.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^7.9.1",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
